--- a/requirements.txt
+++ b/requirements.txt
@@ -1,65 +1,4 @@
-attrs==23.2.0
-blinker==1.8.2
-build==1.1.1
-certifi==2024.2.2
-charset-normalizer==3.3.2
-click==8.1.7
-click-plugins==1.1.1
-cligj==0.7.2
-contourpy==1.2.0
-cv==1.0.0
-cycler==0.12.1
-docutils==0.20.1
-fiona==1.9.6
-Flask==3.0.3
-fonttools==4.49.0
-geopandas==0.14.3
-idna==3.6
-imageio==2.34.0
-importlib_metadata==7.0.2
-itsdangerous==2.2.0
-jaraco.classes==3.3.1
-Jinja2==3.1.4
-joblib==1.3.2
-keyring==24.3.1
-kiwisolver==1.4.5
-lazy_loader==0.3
-llvmlite==0.42.0
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-matplotlib==3.8.3
-mdurl==0.1.2
-more-itertools==10.2.0
-networkx==3.2.1
-nh3==0.2.15
-numba==0.59.0
-numpy==1.26.4
-opencv-python==4.9.0.80
-osmnx==1.9.1
-packaging==24.0
-pandas==2.2.1
-pillow==10.2.0
-pkginfo==1.10.0
-Pygments==2.17.2
-pyparsing==3.1.2
-pyproj==3.6.1
-pyproject_hooks==1.0.0
-python-dateutil==2.9.0.post0
-pytz==2024.1
-readme_renderer==43.0
-requests==2.31.0
-requests-toolbelt==1.0.0
-rfc3986==2.0.0
-rich==13.7.1
-scikit-image==0.22.0
-scipy==1.12.0
-setuptools==69.2.0
-shapely==2.0.3
-six==1.16.0
-tifffile==2024.2.12
-twine==5.0.0
-tzdata==2024.1
-urllib3==2.2.1
-Werkzeug==3.0.3
-wheel==0.43.0
-zipp==3.18.1
+Flask==2.0.3
+Pillow==10.3.0
+Numpy==1.26.4
+Matplotlib==3.9.0
